--- a/src/app/reactive/basic-page/basic-page.component.html
+++ b/src/app/reactive/basic-page/basic-page.component.html
@@ -12,11 +12,10 @@
         <div class="col-sm-9">
 
           <input type="text" formControlName="name" class="form-control" placeholder="Nombre del producto">
+            <span *ngIf="isValidField('name')" class="form-text text-danger m-0">
+              {{ getFieldError('name') }}
+            </span>
 
-          <span class="form-text text-danger">
-            <!-- Debe de ser de 3 letras -->
-            error message
-          </span>
         </div>
       </div>
 
@@ -25,7 +24,7 @@
         <label class="col-sm-3 col-form-label">Precio</label>
         <div class="col-sm-9">
           <input type="number" formControlName="price" class="form-control" placeholder="Precio del producto">
-          <span class="form-text text-danger">
+          <span *ngIf="isValidField('price')" class="form-text text-danger">
             El precio debe de ser 0 o mayor
           </span>
         </div>
@@ -37,7 +36,7 @@
         <div class="col-sm-9">
           <input type="number" formControlName="inStorage" class="form-control" placeholder="Existencias del producto">
 
-          <span class="form-text text-danger">
+          <span *ngIf="isValidField('inStorage')" class="form-text text-danger">
             Las existencias deben de ser 0 o mayor
           </span>
         </div>
