--- a/src/app/reactive/dynamic-page/dynamic-page.component.html
+++ b/src/app/reactive/dynamic-page/dynamic-page.component.html
@@ -11,8 +11,8 @@
         formControlName="name"
         class="form-control"
         placeholder="Nombre de la persona">
-      <span class="form-text text-danger">
-        error message
+      <span *ngIf="isValidField('name')"  class="form-text text-danger">
+        {{ getFieldError('name') }}
       </span>
     </div>
   </div>
@@ -44,11 +44,11 @@
         <div class="input-group">
           <input [formControlName]="i" class="form-control">
 
-          <button class="btn btn-outline-danger" type="button">
+          <button (click)="onDeleteFavorite(i)" class="btn btn-outline-danger" type="button">
             Eliminar
           </button>
         </div>
-        <span class="form-text text-danger">
+        <span *ngIf="isValidFieldInArray(favoriteGameControl, i)"  class="form-text text-danger">
           Este campo es requerido
         </span>
 
