--- a/src/app/reactive/dynamic-page/dynamic-page.component.html
+++ b/src/app/reactive/dynamic-page/dynamic-page.component.html
@@ -23,10 +23,10 @@
     <div class="col-sm-9">
 
       <div class="input-group">
-        <input class="form-control" placeholder="Agregar favorito">
 
+        <input  [formControl] = "newFavorite" class="form-control" placeholder="Agregar favorito">
 
-        <button class="btn btn-outline-primary" type="button">
+        <button (click)="onAddToFavorites()" class="btn btn-outline-primary" type="button">
           Agregar favorito
         </button>
       </div>
@@ -74,13 +74,13 @@
 
 
 <span>Valid</span>
-<pre>{{ 'object' | json }}</pre>
+<pre>{{ myForm.valid | json }}</pre>
 <br>
 
 <span>Value</span>
-<pre>{{ 'object' | json }}</pre>
+<pre>{{ myForm.value | json }}</pre>
 <br>
 
 <span>Agregar Juego</span>
-<pre>{{ 'object' | json }}</pre>
-<pre>{{ 'object' | json }}</pre>
+<pre>{{ newFavorite.valid | json }}</pre>
+<pre>{{ newFavorite.value | json }}</pre>
