--- a/src/app/reactive/switches-page/switches-page.component.html
+++ b/src/app/reactive/switches-page/switches-page.component.html
@@ -2,7 +2,7 @@
 <hr>
 
 
-<form autocomplete="off">
+<form [formGroup]="myForm" (ngSubmit)="onSave()" autocomplete="off">
 
   <!-- Radio -->
   <div class="row mb-3">
@@ -10,20 +10,33 @@
     <div class="col-sm-9">
 
       <div class="form-check">
-        <input class="form-check-input" type="radio" value="M" id="radioMasculino">
+        <input
+          formControlName="gender"
+          class="form-check-input"
+          type="radio"
+          value="M"
+          id="radioMasculino"
+          name="gender">
         <label class="form-check-label" for="radioMasculino">
           Masculino
         </label>
       </div>
 
       <div class="form-check">
-        <input class="form-check-input" type="radio" value="F" id="radioFemenino">
+        <input
+          formControlName="gender"
+          class="form-check-input"
+          type="radio"
+          value="F"
+          id="radioFemenino"
+          name="gender">
         <label class="form-check-label" for="radioFemenino">
           Femenino
         </label>
       </div>
 
     </div>
+    <span *ngIf="isValidField('gender')"> Este campo es requerido </span>
   </div>
 
   <!-- Switches -->
@@ -32,7 +45,7 @@
     <div class="col-sm-9">
 
       <div class="form-check form-switch mt-2">
-        <input class="form-check-input" type="checkbox" id="flexSwitchCheckChecked">
+        <input formControlName="wantNotificactions" class="form-check-input" type="checkbox" id="flexSwitchCheckChecked">
         <label class="form-check-label" for="flexSwitchCheckChecked">Quiero recibir notificaciones</label>
       </div>
 
@@ -44,12 +57,12 @@
     <label class="col-sm-3 col-form-label"></label>
     <div class="col-sm-9">
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" id="flexCheckDefault">
+        <input formControlName="termsAndConditions" class="form-check-input" type="checkbox" id="flexCheckDefault">
         <label class="form-check-label" for="flexCheckDefault">
           Términos y condiciones de uso
         </label>
       </div>
-      <span class="form-text text-danger">
+      <span *ngIf="isValidField('termsAndConditions')" class="form-text text-danger">
         Debe de aceptar las condiciones de uso
       </span>
 
@@ -70,15 +83,15 @@
 
 
 <h5>Valor del formulario</h5>
-<pre>{{ 'object' | json }}</pre>
+<pre>{{ myForm.value| json }}</pre>
 <br>
 
 <h5>Persona</h5>
-<pre>{{ 'object' | json }}</pre>
+<pre>{{ person | json }}</pre>
 <br>
 
 <h5>Valid</h5>
-<pre>{{ 'object' | json }}</pre>
+<pre>{{ myForm.valid | json }}</pre>
 
 <!-- <h5>Términos</h5> -->
 <!-- <pre>{{ myForm.controls?.terminos?.errors | json }}</pre> -->
